samples/_failures_safe/1761527584_b12c84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39c3008c.c: In function ‘main’:
./samples/SAFE/__tmp_39c3008c.c:160:5: error: expected expression at end of input
  160 |     for (int i = 0;
      |     ^~~
./samples/SAFE/__tmp_39c3008c.c:160:5: error: expected declaration or statement at end of input
